--- a/src/Components/Shared/MyTools/WhatDoIDo/WhatDoIDoButton/WhatDoIDoButton.module.scss
+++ b/src/Components/Shared/MyTools/WhatDoIDo/WhatDoIDoButton/WhatDoIDoButton.module.scss
@@ -1,7 +1,6 @@
 .whatDoIDoBtn {
   -webkit-tap-highlight-color: transparent;
   background-color: var(--black);
-  color: #fff;
   border: none;
   width: 40px;
   height: 40px;
